src/pages/Resume.css
body {
  font-family: 'Arial', sans-serif;
  margin: 0;
  padding: 0;
  background-color: #f4f4f4;
}

.resume-container {
  width: 100%; /* Ensure full width */
  max-width: 900px;
  margin: 0 auto;
  margin-bottom: 15px;
  padding: 30px;
  padding-top: 10px;
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
  box-sizing: border-box; /* Include padding in width */
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 30px;
  margin-left: 20px;
  margin-right: 20px;
}

.titles {
  text-align: left;
  flex: 1; /* Allow titles to take up remaining space */
}

.socials {
  text-align: right;
  flex: 1; /* Allow socials to take up remaining space */
}

header h1 {
  margin-bottom: 0;
  font-size: 2em;
}

header p {
  margin-top: 5px;
  color: gray;
}

.resume-section {
  margin-bottom: 30px;
}

.resume-section h2 {
  border-bottom: 2px solid #333;
  padding-bottom: 5px;
  margin-bottom: 15px;
  font-size: 1.5em;
  cursor: pointer;
  color: solid #333;
  display: flex;
  align-items: center;
}

.resume-section h2:hover {
  text-decoration: underline;
}

.resume-section h2 .fa-icon {
  margin-left: 8px;
}

.section-icon {
  font-size: 16px;
  margin-left: 8px;
}

.resume-item {
  margin-bottom: 20px;
}

.resume-item h3 {
  margin-bottom: 5px;
  font-size: 1.3em;
  display: flex;
  align-items: center;
}

.resume-item h3 img {
  margin-right: 10px;
}

.resume-item p {
  margin-bottom: 5px;
  color: gray;
  font-size: 0.9em;
}

.skills-list {
  list-style-type: none;
  padding: 0;
  margin-bottom: 15px;
}

.skills-list li {
  display: inline-block;
  margin-right: 15px;
  margin-bottom: 15px;
  background: #eee;
  padding: 5px 10px;
  border-radius: 5px;
}

.project-title {
  margin-bottom: 0px;
  text-decoration: underline;
}

.project-info {
  margin-top: 5px;
}

a {
  color: #1a0dab;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.linkedin-logo {
  width: 60px;
  height: 60px;
  vertical-align: middle;
}

.git-logo {
  width: 40px;
  height: 40px;
  vertical-align: middle;
  padding-left: 5px;
}

.company-logo {
  width: 50px;
  height: 50px;
  margin-right: 10px;
  vertical-align: middle;
}

/* Responsive Styles */
@media (max-width: 768px) {
  .resume-container {
    width: 95%; /* Reduce width to avoid overflow */
    padding: 15px;
    margin-top: 0;
    margin-bottom: 0;
  }

  header h1 {
    font-size: 1.8em;
  }

  .resume-section h2 {
    font-size: 1.3em;
  }

  .resume-item h3 {
    font-size: 1.2em;
  }

  .resume-item p {
    font-size: 0.85em;
  }

  .skills-list {
    font-size: 0.85em;
    margin-right: 8px;
  }
}

@media (max-width: 480px) {
  header h1 {
    font-size: 1em;
  }
  
  header h2 {
    font-size: .8em;
  }

  header p {
    font-size: 0.9em;
  }

  .resume-section h2 {
    font-size: 1em;
  }

  .resume-item h3 {
    font-size: 1em;
  }

  .resume-item p {
    font-size: 0.8em;
  }

  .skills-list {
    font-size: 0.8em;
    margin-right: 5px;
    padding: 3px 8px;
  }
}

